--- a/compose/ol7_183_ords/docker-compose.yml
+++ b/compose/ol7_183_ords/docker-compose.yml
@@ -40,6 +40,7 @@ services:
     ports:
       - "8080:8080"
       - "8443:8443"
+    restart: unless-stopped
 
   # Oracle Database service
   dbservice:
@@ -58,6 +59,7 @@ services:
       - APEX_PASSWORD=ApexPassword1
     ports:
       - "1521:1521"
+    restart: unless-stopped
 
   # Portainer
   portainerservice:
@@ -67,6 +69,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "9000:9000"
+    restart: unless-stopped
 
 volumes:
 #  db-data:
