Make unzips silent. Remove replacement of APEX software. Make APEX installation optional.

--- a/database/ol7_121/Dockerfile
+++ b/database/ol7_121/Dockerfile
@@ -59,6 +59,7 @@ ENV PATH=${ORACLE_HOME}/bin:${PATH}
 ENV ORACLE_SID="cdb1"                                                          \
     SYS_PASSWORD="SysPassword1"                                                \
     PDB_NAME="pdb1"                                                            \
+    INSTALL_APEX="true"                                                        \
     PDB_PASSWORD="PdbPassword1"                                                \
     APEX_EMAIL="me@example.com"                                                \
     APEX_PASSWORD="ApexPassword1"
@@ -97,7 +98,7 @@ USER oracle
 
 # Unzip software
 RUN cd ${SOFTWARE_DIR}                                                      && \
-    unzip "${DB_SOFTWARE}"                                                  && \
+    unzip -oq "${DB_SOFTWARE}"                                              && \
     rm -f ${DB_SOFTWARE}
 
 # Do software-only installation
@@ -120,11 +121,7 @@ RUN ${SOFTWARE_DIR}/database/runInstaller -ignoreSysPrereqs -ignorePrereq      \
     DECLINE_SECURITY_UPDATES=true
 
 # Remove source software
-# Replace default APEX software with user-provided version.
-RUN rm -Rf ${SOFTWARE_DIR}/database                                         && \
-    rm -Rf ${ORACLE_HOME}/apex                                              && \
-    unzip -d ${ORACLE_HOME} ${SOFTWARE_DIR}/${APEX_SOFTWARE}                && \
-    rm ${SOFTWARE_DIR}/${APEX_SOFTWARE}
+RUN rm -Rf ${SOFTWARE_DIR}/database
 
 # Run the root scripts
 USER root
