Update to Oracle 19c (19.3).

--- a/database/ol7_19/Dockerfile
+++ b/database/ol7_19/Dockerfile
@@ -45,7 +45,7 @@ ENV ORACLE_BASE=/u01/app/oracle                                                \
     ORACLE_HOME=/u01/app/oracle/product/19.0.0/dbhome_1                        \
     ORA_INVENTORY=/u01/app/oraInventory                                        \
     SOFTWARE_DIR=/u01/software                                                 \
-    DB_SOFTWARE="V981623-01.zip"                                               \
+    DB_SOFTWARE="LINUX.X64_193000_db_home.zip"                                 \
     APEX_SOFTWARE="apex_19.1_en.zip"                                           \
     ORACLE_PASSWORD="oracle"                                                   \
     SCRIPTS_DIR=/u01/scripts                                                   \
