--- a/database/ol8_183/Dockerfile
+++ b/database/ol8_183/Dockerfile
@@ -32,7 +32,8 @@
 # ------------------------------------------------------------------------------
 
 # Set the base image to Oracle Linux 8 - Slim
-FROM oraclelinux:8-slim
+#FROM oraclelinux:8-slim
+FROM oraclelinux:8
 
 # File Author / Maintainer
 # Use LABEL rather than deprecated MAINTAINER
