--- a/database/ol8_19/Dockerfile
+++ b/database/ol8_19/Dockerfile
@@ -89,8 +89,8 @@ RUN microdnf install -y shadow-utils                                        && \
     chown -R oracle:oinstall /u01                                           && \
     chmod u+x ${SCRIPTS_DIR}/*.sh                                           && \
     chown -R oracle:docker_fg /u02                                          && \
-    chmod 775 /u02                                                          && \
-    chmod g+s /u02
+    chmod -R 775 /u02                                                       && \
+    chmod -R g+s /u02
 
 # Perform the following actions as the oracle user
 USER oracle
