set scheme as runtime env

--- a/ords/ol7_ords/Dockerfile
+++ b/ords/ol7_ords/Dockerfile
@@ -75,6 +75,7 @@ ENV DB_HOSTNAME="ol7-183.localdomain"                                          \
     PROXY_IPS="123.123.123.123\|123.123.123.124"                               \
     PROXY_SERVER="foo.bar.com"                                                 \
     PROXY_PORT="443"                                                           \
+    HTTP_SCHEME="https"                                                        \
     JVM_OPTS=""
 
 # ------------------------------------------------------------------------------
