--- a/ords/ol7_ords/scripts/web.xml
+++ b/ords/ol7_ords/scripts/web.xml
@@ -4761,4 +4761,39 @@
         <url-pattern>/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
+
+    <filter>
+      <filter-name>httpHeaderSecurity</filter-name>
+      <filter-class>org.apache.catalina.filters.HttpHeaderSecurityFilter</filter-class>
+      <async-supported>true</async-supported>
+      <init-param>
+        <param-name>hstsEnabled</param-name>
+        <param-value>true</param-value>
+      </init-param>
+      <init-param>
+        <param-name>hstsMaxAgeSeconds</param-name>
+        <param-value>31536000</param-value>
+      </init-param>
+      <init-param>
+        <param-name>hstsIncludeSubDomains</param-name>
+        <param-value>true</param-value>
+      </init-param>
+      <init-param>
+        <param-name>antiClickJackingOption</param-name>
+        <param-value>SAMEORIGIN</param-value>
+      </init-param>
+      <init-param>
+        <param-name>antiClickJackingEnabled</param-name>
+        <param-value>true</param-value>
+      </init-param>
+    </filter>
+
+    <filter-mapping>
+      <filter-name>httpHeaderSecurity</filter-name>
+      <url-pattern>/*</url-pattern>
+      <url-pattern>*</url-pattern>
+      <url-pattern>/portal/*</url-pattern>
+      <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
+
 </web-app>
