--- a/database/ol7_19/Dockerfile
+++ b/database/ol7_19/Dockerfile
@@ -64,7 +64,8 @@ ENV ORACLE_SID=cdb1                                                            \
     PDB_PASSWORD="PdbPassword1"                                                \
     INSTALL_APEX="true"                                                        \
     APEX_EMAIL="me@example.com"                                                \
-    APEX_PASSWORD="ApexPassword1"
+    APEX_PASSWORD="ApexPassword1"                                              \
+    DOCKER_FG_ID="3333"
 
 # ------------------------------------------------------------------------------
 # Get all the files for the build.
@@ -81,7 +82,7 @@ COPY scripts/* ${SCRIPTS_DIR}/
 #
 RUN groupadd -g 500 dba                                                     && \
     groupadd -g 501 oinstall                                                && \
-    groupadd -g 1042 docker_fg                                              && \
+    groupadd -g ${DOCKER_FG_ID} docker_fg                                   && \
     useradd -d /home/oracle -u 500 -g dba -G oinstall,dba,docker_fg -m -s /bin/bash oracle   && \
     yum -y install unzip tar gzip                                           && \
     yum -y update                                                           && \
