--- a/database/ol7_21/Dockerfile
+++ b/database/ol7_21/Dockerfile
@@ -66,7 +66,8 @@ ENV ORACLE_SID=cdb1                                                            \
     INSTALL_APEX="true"                                                        \
     APEX_EMAIL="me@example.com"                                                \
     APEX_PASSWORD="ApexPassword1"                                              \
-    DOCKER_FG_ID="1042"
+    DOCKER_FG_ID="1042"                                                        \
+    ORACLE_USER_ID="500"
 
 # ------------------------------------------------------------------------------
 # Get all the files for the build.
@@ -84,7 +85,7 @@ COPY scripts/* ${SCRIPTS_DIR}/
 RUN groupadd -g 500 dba                                                     && \
     groupadd -g 501 oinstall                                                && \
     groupadd -g ${DOCKER_FG_ID} docker_fg                                   && \
-    useradd -d /home/oracle -u 500 -g dba -G oinstall,dba,docker_fg -m -s /bin/bash oracle   && \
+    useradd -d /home/oracle -u ${ORACLE_USER_ID} -g dba -G oinstall,dba,docker_fg -m -s /bin/bash oracle   && \
     yum -y install unzip tar gzip                                           && \
     yum -y update                                                           && \
     yum -y install oracle-database-preinstall-21c                           && \
