--- a/ords/ol7_ords/Dockerfile
+++ b/ords/ol7_ords/Dockerfile
@@ -44,10 +44,10 @@ LABEL maintainer="tim@oracle-base.com"
 
 # ------------------------------------------------------------------------------
 # Define fixed (build time) environment variables.
-ENV JAVA_SOFTWARE="OpenJDK11U-jdk_x64_linux_hotspot_11.0.20_8.tar.gz"          \
-    TOMCAT_SOFTWARE="apache-tomcat-9.0.82.tar.gz"                              \
+ENV JAVA_SOFTWARE="graalvm-jdk-17_linux-x64_bin.tar.gz"          \
+    TOMCAT_SOFTWARE="apache-tomcat-9.0.85.tar.gz"                              \
     ORDS_SOFTWARE="ords-latest.zip"                                            \
-    APEX_SOFTWARE="apex_23.1_en.zip"                                           \ 
+    APEX_SOFTWARE="apex_23.2_en.zip"                                           \ 
     SQLCL_SOFTWARE="sqlcl-latest.zip"                                          \
     SOFTWARE_DIR="/u01/software"                                               \
     SCRIPTS_DIR="/u01/scripts"                                                 \
